syntax="proto3";

package rpc;

message UserInfo {
    string Name = 1;
    string Domain = 2;
    string Device = 3;
    string NickName = 4;
    uint64 LoginTime = 5;
}

message ClientInfo {
    map<string, string> Extra = 1;
    uint32 ClientType = 2;
    string ClientVersion = 3;
    string ProtoType = 4;
    string ProtoVersion = 5;
    uint32 OSType = 6;
    string OSVersion = 7;
    string DeviceType = 8;
    string DeviceNumber = 9;
}

message Session {
    uint64 ID = 1;
    string Addr = 2;
    UserInfo User = 3;
    ClientInfo Client = 4;
}

message SessionResult {
    repeated Session Data = 3;
}

message SessionStatRequest {
}

message SessionStat {
    int32 Count = 1;
    map<string, int32> DomainUsers = 2;
    map<uint64, int32> ConnNumbers = 3;
}

service SessionStore {
	rpc Save(Session) returns(SessionResult){}
	rpc Update(Session) returns(SessionResult){}
    rpc Remove(Session)returns(SessionResult){}
    rpc Replace(Session)returns(SessionResult){}
	rpc Stat(SessionStatRequest) returns(SessionStat){}
	rpc Get(Session) returns(SessionResult){}
}